# tetrit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
tetrit/: CMakeLists.txt
tetrit/app/tetrit/: main.cpp
tetrit/src/tetrit/: hello_world.hpp
tetrit/src/tetrit/blocks/: block.hpp  corner_left.hpp  corner_right.hpp  snake_left.hpp  snake_right.hpp  square.hpp  tee.hpp  tower.hpp
tetrit/src/tetrit/geometry/: kernel.hpp
tetrit/test/: CMakeLists.txt
tetrit/test/src/: test_blocks_block.cpp  test_blocks_corner_left.cpp  test_blocks_corner_right.cpp  test_blocks_snake_left.cpp  test_blocks_snake_right.cpp  test_blocks_square.cpp  test_blocks_tee.cpp  test_blocks_tower.cpp  test_eigen_quaternion.cpp  test_geometry_kernel.cpp  test_hello_world.cpp
